--- a/src/components/Modals/modals.scss
+++ b/src/components/Modals/modals.scss
@@ -69,7 +69,7 @@
   &.open {
     //background-color: rgba(#0A0F1E, 0.95);
     z-index: 1000;
-    overflow: auto;
+    //overflow: auto;
     visibility: visible;
 
     &.reveal-modal {
